# dbcsr

./: .ccls  .clang-format  .cmake-format.py  .codecov.yml  .flake8  .fortls  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .packit.yaml  .pre-commit-config.yaml  .ruff.toml  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  DBCSR.md  INSTALL.md  LICENSE  Makefile  Makefile.inc  README.md  VERSION  index.html  project-file.md.in  search.html
examples/: CMakeLists.txt  DistBCSR_example_1.cpp  DistBCSR_example_2.cpp  DistBCSR_example_3.cpp  Makefile  README  README.md  dbcsr_example_1.F  dbcsr_example_2.F  dbcsr_example_3.F  dbcsr_example_3.cpp  dbcsr_example_4.cpp  dbcsr_example_5.cpp  dbcsr_tensor_example.F  dbcsr_tensor_example_1.F  dbcsr_tensor_example_1.cpp  dbcsr_tensor_example_2.cpp
examples/carma/: Makefile  carma_mm.F  test_carma.F  test_mm.F
examples/tight_binding/: Makefile  README.md  dbcsr_scalapack.F  dm_ls_scf_methods.F  make_twist_proper.py  tb.py  tight_binding.F
src/: CMakeLists.txt  DistBCSR.hpp  DistBCSR.md  PACKAGE  dbcsr.h  dbcsr_acc_device.F  dbcsr_acc_devmem.F  dbcsr_acc_hostmem.F  dbcsr_acc_operations.F  dbcsr_acc_stream.F  dbcsr_allocate_wrap.F  dbcsr_api.F  dbcsr_api.f90  dbcsr_api_c.F  dbcsr_array_list_methods.F  dbcsr_array_sort.F  dbcsr_array_types.F  dbcsr_block_access.F  dbcsr_block_operations.F  dbcsr_btree.F  dbcsr_c.h  dbcsr_config.F  dbcsr_cuda_profiling.F  dbcsr_data_methods_low.F  dbcsr_dict.F  dbcsr_dist_methods.F  dbcsr_dist_operations.F  dbcsr_error_handling.F  dbcsr_files.F  dbcsr_hipblas.F  dbcsr_index_operations.F  dbcsr_io.F  dbcsr_iterator_operations.F  dbcsr_kinds.F  dbcsr_lib.F  dbcsr_list.F  dbcsr_list_callstackentry.F  dbcsr_list_routinereport.F  dbcsr_list_routinestat.F  dbcsr_list_timerenv.F  (+44 more)
src/acc/: PACKAGE  README.md  acc.h  acc_bench.c  acc_bench.h  acc_bench_smm.c  acc_bench_smm.sh  acc_bench_trans.c  acc_dev.cpp  acc_device.F  acc_devmem.F  acc_error.cpp  acc_error.h  acc_event.F  acc_event.cpp  acc_hostmem.F  acc_init.cpp  acc_libsmm.h  acc_makedep.sh  acc_mem.cpp  acc_stream.F  acc_stream.cpp  acc_triplets.sh  dbcsr_acc_device.F  dbcsr_acc_devmem.F  dbcsr_acc_event.F  dbcsr_acc_hostmem.F  dbcsr_acc_init.F  dbcsr_acc_stream.F  dbcsr_acc_timings.F
src/base/: PACKAGE  dbcsr_base_hooks.F  dbcsr_base_uses.f90  dbcsr_kinds.F  dbcsr_machine.F  dbcsr_machine_internal.F  dbcsr_machine_posix.f90
src/block/: PACKAGE  dbcsr_block_access.F  dbcsr_block_access.f90  dbcsr_block_operations.F  dbcsr_block_operations.f90  dbcsr_data_operations.F  dbcsr_index_operations.F  dbcsr_iterator_operations.F  dbcsr_iterator_operations.f90  dbcsr_work_operations.F  dbcsr_work_operations.f90
src/cmake/: DBCSRConfig.cmake.in  FindLIBXSMM.cmake
src/common/: PACKAGE  bessel_lib.F  bibliography.F  cg_test.F  cp_array_sort.F  cp_array_utils.F  cp_files.F  cp_iter_types.F  cp_log_handling.F  cp_min_heap.F  cp_para_env.F  cp_result_methods.F  cp_result_types.F  cp_units.F  cuda_profiling.F  dbcsr_array_sort.F  dbcsr_array_utils.F  dbcsr_cuda_profiling.F  dbcsr_dict.F  dbcsr_distribution_1d_types.F  dbcsr_erf_fn.F  dbcsr_error_handling.F  dbcsr_files.F  dbcsr_fparser.F  dbcsr_glob_matching.F  dbcsr_iter_types.F  dbcsr_kahan_sum.F  dbcsr_linked_list.fypp  dbcsr_list.fypp  dbcsr_list_callstackentry.F  dbcsr_list_routinestat.F  dbcsr_list_timerenv.F  dbcsr_log_handling.F  dbcsr_memory_utilities.F  dbcsr_para_env.F  dbcsr_para_types.F  dbcsr_parallel_rng_types.F  dbcsr_print_messages.F  dbcsr_result_methods.F  dbcsr_result_types.F  (+30 more)
src/core/: PACKAGE  dbcsr_array_types.F  dbcsr_config.F  dbcsr_dict.F  dbcsr_dict.fypp  dbcsr_error_handling.F  dbcsr_iter_types.F  dbcsr_lib.F  dbcsr_list.F  dbcsr_list.fypp  dbcsr_list_callstackentry.F  dbcsr_list_routinereport.F  dbcsr_list_routinestat.F  dbcsr_list_timerenv.F  dbcsr_log_handling.F  dbcsr_memory_utilities.F  dbcsr_methods.F  dbcsr_print_messages.F  dbcsr_timings.F  dbcsr_timings_base_type.F  dbcsr_timings_report.F  dbcsr_timings_types.F  dbcsr_types.F
src/data/: PACKAGE  dbcsr.fypp  dbcsr_data_methods.F  dbcsr_data_methods_low.F  dbcsr_data_methods_low.f90  dbcsr_data_operations.F  dbcsr_data_types.F  dbcsr_mem_methods.F  dbcsr_ptr_util.F  dbcsr_ptr_util.f90
src/dbcsr_base/: PACKAGE  dbcsr_array_types.F  dbcsr_btree.F  dbcsr_config.F  dbcsr_methods.F  dbcsr_types.F
src/extras/: PACKAGE  dbcsr_cuda_nvtx_cu.cu  dbcsr_cuda_profiling.F  dbcsr_dict.F  dbcsr_dict.fypp  dbcsr_error_handling.F  dbcsr_files.F  dbcsr_iter_types.F  dbcsr_list.F  dbcsr_list.fypp  dbcsr_list_callstackentry.F  dbcsr_list_routinereport.F  dbcsr_list_routinestat.F  dbcsr_list_timerenv.F  dbcsr_log_handling.F  dbcsr_memory_utilities.F  dbcsr_print_messages.F  dbcsr_timings.F  dbcsr_timings_base_type.F  dbcsr_timings_report.F  dbcsr_timings_types.F
src/la/: PACKAGE  dbcsr_iterate_matrix.F  dbcsr_ls_matrix_exp.F  dbcsr_scalapack.F  iterate_matrix.F
src/libsmm_acc/: PACKAGE
src/mm/: PACKAGE  dbcsr_acc_operations.F  dbcsr_mm.F  dbcsr_mm_3d.F  dbcsr_mm_accdrv.F  dbcsr_mm_cannon.F  dbcsr_mm_cannon.f90  dbcsr_mm_carma.F  (+14 more)
tests/: .gitignore  CMakeLists.txt  Makefile.inc  README  README.md  c_dbcsr_tensor_test.cpp  dbcsr_acc_test.c  dbcsr_la_test.F  dbcsr_performance_driver.F  dbcsr_performance_multiply.F  dbcsr_rectangular_unittest.F  dbcsr_tas_unittest.F  dbcsr_tensor_test.cpp  dbcsr_tensor_unittest.F  dbcsr_test.cpp  dbcsr_test_acc.c  dbcsr_test_add.F  dbcsr_test_csr_conversions.F  dbcsr_test_mat_vec_mult.F  dbcsr_test_multiply.F  dbcsr_test_rect_mm.F  dbcsr_test_scale_by_vector.F  dbcsr_unittest.F  dbcsr_unittest1.F  dbcsr_unittest2.F  dbcsr_unittest3.F  dbcsr_unittest4.F  generate_libcusmm_timer_multiply.py  generate_libcusmm_unittest_multiply.py  generate_libhipsmm_timer_multiply.py  generate_libhipsmm_unittest_multiply.py  generate_libsmm_acc_timer_multiply.py  generate_libsmm_acc_unittest_multiply.py  generate_libsmm_timer_multiply.py  generate_libsmm_unittest_multiply.py  input.perf  libcusmm_timer_multiply.cu  libcusmm_timer_multiply.template  libcusmm_unittest.cu  libcusmm_unittest_multiply.cu  (+12 more)
(+50381 files in other folders)
